Updated results of solving CartPole-v1 with DQN agent

--- a/Results - DQN agent solving CartPole-v1 .ipynb
+++ b/Results - DQN agent solving CartPole-v1 .ipynb
@@ -4,9 +4,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Results from using DQN agent in solving the CartPole-v1 environment\n",
-    "## Comparision between 2 layer and 3 layer networks (each layer with 20 nodes)\n",
-    "### Main Results: 3 layer network seems to perform slightly worse than 2 layer, suggesting overfitting."
+    "# Results\n",
+    "## Agent: DQN  \n",
+    "## Environment: CartPole-v1 \n",
+    "### Comparision between 2 layer and 3 layer networks (each layer with 20 nodes)\n",
+    "#### Main Results: 3 layer network seems to perform slightly worse than 2 layer, suggesting overfitting."
    ]
   },
   {
@@ -19,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +878,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1691,7 +1693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1738,7 +1740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
